--- a/css/layout1.css
+++ b/css/layout1.css
@@ -1,22 +1,40 @@
-/*.fixed-nav-bar {
+.menu {
   position: fixed;
   top: 0;
   left: 0;
+  right: 0;
   z-index: 9999;
   width: 100%;
   height: 50px;
-  background-color: #00a087;
-}*/
-.menu {
-    background:#345;
-    color:#FFF;
-    height:2em;
-    padding:.5em;
-    position:absolute;
-    top:50px;
-    width:100%;
+  background-color: #610a56;
+  width: 100%;
+  
+  margin: 0 auto;
 }
+/*.menu-items{
+
+}*/
 .fixed {
     position:fixed;
     top:0;
+}
+
+
+.menu a, .menu a:visited {
+  color: #ffffff;
+}
+.menu a:hover, .menu a:target {
+  color: #ebebeb;
+}
+.menu-items {
+  display: inline-block;
+}
+
+.menu-items li {
+  display: inline-block;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+.menu-items a {
+  text-decoration: none;
 }
