--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 body{
    overflow-y: scroll;
   overflow-x: hidden;
+  padding-top: 70px;
 }
 .row{
   margin: 0 !important;
