--- a/css/main.css
+++ b/css/main.css
@@ -82,21 +82,27 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   height: 100vh;
   /*border:3px solid black;*/
 }
-/*carousel start*/
-.banner-swimming{
-  background-image: url(../images/banner1.jpg);
-  background-size: cover;
-}
-.carousel-caption h1{
+.carousel-caption {
   /*position: absolute;*/
   /*bottom: 30%;*/
   font-family: 'Open Sans Condensed', sans-serif;
   align-content: center;
   font-size: 30px;
+  position: absolute;
+  margin-bottom: 260px;
   font-weight: 200;
   color: white;
+  /*position: absolute;*/
+  /*z-index: 300;*/
   /*padding-top: 20px;*/
+  border: 3px solid black;
 }
+/*carousel start*/
+.banner-swimming{
+  background-image: url(../images/banner1.jpg);
+  background-size: cover;
+}
+
 .banner-rooms{
   background-image: url(../images/banner2.jpg);
   background-size: cover;
@@ -299,9 +305,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   left: 30%;
   /*align-content: flex-end;*/
 }
-.dinner-party-text hr{
 
-}
+
 .dinner-stuff{
   height: 40vh;
   /*margin-top: 20px;*/
@@ -510,9 +515,7 @@ section.module p {
 section.module p:last-child {
   margin-bottom: 0;
 }
-section.module.content {
-  /*padding: 40px 0 ;*/
-}
+
 section.module.parallax {
   height: 600px;
   background-position: 50% 50%;
@@ -582,16 +585,6 @@ section.module.parallax-3 {
 .family{
   height: 10vh;
   background-color: rgb(244, 244, 244);
-}
-.payment{
-
-  /*border: 1px dotted green;*/
-  /*border-bottom:1px dotted green;*/
-/*background-color: rgb(31, 24, 25);*/
-}
-.desc{
-  /*border: 1px dotted green;*/
-  /*border-bottom: 1px dotted green;*/
 }
 /*footer start*/
 /* ============================================================
