--- a/css/main.css
+++ b/css/main.css
@@ -82,22 +82,32 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   height: 100vh;
   /*border:3px solid black;*/
 }
+/*carousel start*/
 .carousel-caption {
   /*position: absolute;*/
   /*bottom: 30%;*/
-  font-family: 'Open Sans Condensed', sans-serif;
+  
   align-content: center;
-  font-size: 30px;
+  
   position: absolute;
   margin-bottom: 260px;
-  font-weight: 200;
+  
   color: white;
   /*position: absolute;*/
   /*z-index: 300;*/
   /*padding-top: 20px;*/
   border: 3px solid black;
 }
-/*carousel start*/
+.bannerh1{
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 40px;
+  font-weight: 100;
+}
+.bannerh3{
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 30px;
+  font-weight: 200;
+}
 .banner-swimming{
   background-image: url(../images/banner1.jpg);
   background-size: cover;
@@ -108,7 +118,11 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   background-size: cover;
 }
 .banner-bar{
-  background-image: url(../images/banner3.jpg);
+  background:
+   linear-gradient(
+      rgba(12, 12, 13, 0.64),
+    rgba(12, 12, 13, 0.64)
+), url(../images/banner3.jpg);
   background-size: cover;
 }
 .banner-hike{
